--- a/css/userStyles.css
+++ b/css/userStyles.css
@@ -1,6 +1,4 @@
 body {
-    margin: 0;
-    padding: 0;
     font-family: Arial, sans-serif;
     background-color: #333;
     color: #f0f0f0;
@@ -11,6 +9,17 @@ a {
     text-decoration: none;
 }
 
-a:hover {
-    text-decoration: underline;
+window {
+    border-radius: 15px;
+}
+
+button {
+    border: none;
+    background: none;
+    padding: 5px;
+}
+
+entry {
+    border-radius: 20px;
+    padding: 5px 10px;
 }
